docs/api/qiskit/1.3/qiskit.circuit.library.U1Gate.mdx
---
title: U1Gate (v1.3)
description: API reference for qiskit.circuit.library.U1Gate in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.U1Gate
---

# U1Gate

<Class id="qiskit.circuit.library.U1Gate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/circuit/library/standard_gates/u1.py#L25-L174" signature="qiskit.circuit.library.U1Gate(theta, label=None, *, duration=None, unit='dt')" modifiers="class">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Single-qubit rotation about the Z axis.

  This is a diagonal gate. It can be implemented virtually in hardware via framechanges (i.e. at zero error and duration).

  <Admonition title="Warning" type="caution">
    This gate is deprecated. Instead, the following replacements should be used

$$
U1(\theta) = P(\theta)= U(0,0,\theta)
$$

    ```python
    circuit = QuantumCircuit(1)
    circuit.p(lambda, 0) # or circuit.u(0, 0, lambda, 0)
    ```
  </Admonition>

  **Circuit symbol:**

  ```text
       ┌───────┐
  q_0: ┤ U1(θ) ├
       └───────┘
  ```

  **Matrix Representation:**

$$
U1(\theta) =
\begin{pmatrix}
1 & 0 \\
0 & e^{i\theta}
\end{pmatrix}
$$

  **Examples:**

  > $$
  > U1(\theta = \pi) = Z
  > $$
  >
  > $$
  > U1(\theta = \pi/2) = S
  > $$
  >
  > $$
  > U1(\theta = \pi/4) = T
  > $$

  <Admonition title="See also" type="note">
    `RZGate`: This gate is equivalent to RZ up to a phase factor.

    > $$
    > U1(\theta) = e^{i{\theta}/2} RZ(\theta)
    > $$

    `U3Gate`: U3 is a generalization of U2 that covers all single-qubit rotations, using two X90 pulses.

    Reference for virtual Z gate implementation: [1612.00858](https://arxiv.org/abs/1612.00858)
  </Admonition>

  Create new U1 gate.

  ## Attributes

  **Parameters**

  *   **theta** (*ParameterValueType*) –
  *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) –

  ### base\_class

  <Attribute id="qiskit.circuit.library.U1Gate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.U1Gate.base_class "qiskit.circuit.library.U1Gate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrized gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.U1Gate.condition">
    The classical condition on the instruction.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.condition` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
    </Admonition>
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.U1Gate.condition_bits">
    Get Clbits in condition.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.condition_bits` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
    </Admonition>
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.U1Gate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.U1Gate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.U1Gate.duration">
    Get the duration.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.duration` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
    </Admonition>
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.U1Gate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.U1Gate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.U1Gate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.U1Gate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.U1Gate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.U1Gate.params">
    The parameters of this `Instruction`. Ideally these will be gate angles.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.U1Gate.unit">
    Get the time unit of duration.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.unit` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
    </Admonition>
  </Attribute>

  ## Methods

  ### control

  <Function id="qiskit.circuit.library.U1Gate.control" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/circuit/library/standard_gates/u1.py#L117-L150" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=False)">
    Return a (multi-)controlled-U1 gate.

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – number of control qubits.
    *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – An optional label for the gate \[Default: `None`]
    *   **ctrl\_state** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – control state expressed as integer, string (e.g.\`\`’110’`), or ``None`. If `None`, use all 1s.
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – indicates whether the controlled gate should be implemented as an annotated gate.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.U1Gate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/circuit/library/standard_gates/u1.py#L152-L164" signature="inverse(annotated=False)">
    Return inverted U1 gate ($U1(\lambda)^{\dagger} = U1(-\lambda))$

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as the inverse of this gate is always a [`U1Gate`](#qiskit.circuit.library.U1Gate "qiskit.circuit.library.U1Gate") with inverse parameter values.

    **Returns**

    inverse gate.

    **Return type**

    [U1Gate](#qiskit.circuit.library.U1Gate "qiskit.circuit.library.U1Gate")
  </Function>
</Class>

